--- a/frontend/algorithms/astar.html
+++ b/frontend/algorithms/astar.html
@@ -166,7 +166,264 @@
     .cost-calc p {
       margin: 2px;
     }
+
+    <style>* {
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
+    }
+
+    .header {
+      font-size: 35px;
+      text-align: center;
+    }
+
+    #array {
+      background-color: white;
+      height: 305px;
+      width: 598px;
+      margin: auto;
+      position: relative;
+      margin-top: 64px;
+    }
+
+    .block {
+      width: 28px;
+      background-color: #6b5b95;
+      position: absolute;
+      bottom: 0px;
+      transition: 0.2s all ease;
+    }
+
+    .block_id {
+      position: absolute;
+      color: black;
+      margin-top: -20px;
+      width: 100%;
+      text-align: center;
+    }
+
+    #searchLabel {
+      font-size: 20px;
+      text-align: center;
+      height: 30px;
+    }
+
+    #fname {
+      width: 50px;
+      height: 30px;
+      border-radius: 5px;
+      font-size: 20px;
+      text-align: center;
+      margin-left: 5px;
+    }
+
+    #btn {
+      width: 100px;
+      height: 30px;
+      border-radius: 5px;
+      font-size: 20px;
+      text-align: center;
+      margin-left: 5px;
+
+      &:hover {
+        background-color: #6b5b95;
+        color: white;
+        cursor: pointer;
+      }
+    }
+
+
+
+    body {
+      font-family: monospace;
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      position: relative;
+      color: #cee0cf;
+      background-color: #436b61;
+      width: 100vw;
+      height: 20vh;
+    }
+
+    header div {
+      text-align: center;
+      position: relative;
+      box-sizing: border-box;
+      display: inline-block;
+    }
+
+    main {
+      user-select: none;
+      padding: 20px 0;
+    }
+
+    p {
+      font-size: 9px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    button {
+      font-weight: bold;
+      font-size: 14px;
+      transition: 50ms ease-in-out;
+      border: 1px solid #1e2524;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+    }
+
+    .page-logo {
+      font-size: 22px;
+      line-height: 55px;
+      padding: 10px 25px;
+      width: 230px;
+    }
+
+    .map-size-box * {
+      margin: 4px 0;
+    }
+
+    .map-size-box {
+      font-size: 20px;
+    }
+
+    .map-size-box,
+    .setup-box,
+    .visualize-box {
+      margin: 0 20px;
+      padding-top: 15px;
+      width: 300px;
+    }
+
+    .map-size-box input {
+      padding-left: 2px;
+      width: 36px;
+      height: 25px;
+    }
+
+    .size-button,
+    .visualize-button {
+      font-size: 13px;
+      letter-spacing: 2px;
+      width: 135px;
+      height: 30px;
+      color: #243f39;
+    }
+
+    .node-buttons-box {
+      display: flex;
+      justify-content: center;
+    }
+
+    .node-buttons-box button {
+      font-family: monospace;
+      letter-spacing: 1px;
+      margin: 10px 5px;
+      width: 60px;
+      height: 50px;
+    }
+
+    .block-button {
+      color: #cee0cf;
+      background-color: #243f39;
+    }
+
+    .start-button {
+      color: #303b30;
+      background-color: #bfeaff;
+    }
+
+    .end-button {
+      color: #421212;
+      background-color: #ff9883;
+    }
+
+    .visualize-button {
+      width: 180px;
+      height: 30px;
+      margin-top: 20px;
+    }
+
+    .map-legend {
+      background-color: #cee0cf;
+      height: 5vh;
+    }
+
+    .legend-list {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style-type: none;
+      height: 100%;
+    }
+
+    .legend-list li {
+      display: flex;
+      align-items: center;
+      padding: 0 35px;
+    }
+
+    .item-square {
+      display: inline-block;
+      border: 1px solid black;
+      margin-right: 5px;
+      width: 20px;
+      height: 20px;
+    }
+
+    .item-label {
+      display: inline-block;
+      font-weight: bold;
+      color: #252b2a;
+      letter-spacing: 1px;
+      padding-top: 4px;
+      font-size: 15px;
+      height: 20px;
+    }
+
+    .map-table {
+      border-spacing: 0;
+      margin: 0 auto;
+    }
+
+    .map-table td {
+      position: relative;
+      text-align: center;
+      border: 1px solid black;
+      width: 45px;
+      height: 45px;
+      transition: transform 0.2s ease-out;
+    }
+
+    .map-table td:hover {
+      z-index: 1;
+      transform: scale(1.1);
+    }
+
+    .index-label {
+      pointer-events: none;
+      position: absolute;
+      font-size: 10px;
+      top: 0%;
+      right: 0%;
+    }
+
+    .node-color {
+      width: 100%;
+      height: 100%;
+    }
   </style>
+
+
+
 
 </head>
 
@@ -242,6 +499,185 @@
       <label for="noBreak">None</label><br>
     </div>
   </div>
+
+  <body>
+    <br />
+    <p class="header">Binary Search Tree Visualizer</p>
+    <div id="array"></div>
+    <br /><br />
+
+    <div style="text-align: center">
+      <label id="searchLabel" for="fname">
+        Number to be Searched:
+      </label>
+      <input type="text" id="fname" name="fname" />
+      <br /><br />
+      <button id="btn" onclick="BinarySearch()">Search</button>
+      <br />
+      <br />
+      <div id="text"></div>
+    </div>
+
+
+    <header>
+      <div class="page-logo">
+        <h2>Dijkstra's Algorithm</h2>
+      </div>
+      <div class="map-size-box">
+        <h3>Set Map Size</h3>
+
+        <div>
+          <label for="width-input">Width</label>
+          <input id="width-input" type="number" min="1" max="50" value="10">
+        </div>
+        <div>
+          <label for="height-input">Height</label>
+          <input id="height-input" type="number" min="1" max="50" value="5">
+        </div>
+
+        <button id="size-button" class="size-button">Resize Map</button>
+      </div>
+      <div class="setup-box">
+        <h3>Setup Nodes</h3>
+        <p>(toggle an option and click on the nodes)</p>
+        <div class="node-buttons-box">
+          <button id="block-button" class="block-button">Block Nodes</button>
+          <button id="start-button" class="start-button">Set<br> Start</button>
+          <button id="end-button" class="end-button">Set<br> End</button>
+          <button id="clear-button" class="clear-button">Clear<br> Map</button>
+        </div>
+      </div>
+      <div class="visualize-box">
+        <h3>Start Algorithm</h3>
+        <p>(both a start and end node must be placed)</p>
+
+        <button id="visualize-button" class="visualize-button">Visualize Algorithm</button>
+      </div>
+    </header>
+
+    <div class="map-legend">
+      <ul class="legend-list">
+        <li>
+          <div class="item-square" style="background-color: #ffffff;"></div>
+          <div class="item-label">Blank Node</div>
+        </li>
+        <li>
+          <div class="item-square" style="background-color: #243f39;"></div>
+          <div class="item-label">Blocked Node</div>
+        </li>
+        <li>
+          <div class="item-square" style="background-color: #fdffbf;"></div>
+          <div class="item-label">Visited Node</div>
+        </li>
+        <li>
+          <div class="item-square" style="background-color: #bfeaff;"></div>
+          <div class="item-label">Start Node</div>
+        </li>
+        <li>
+          <div class="item-square" style="background-color: #ff9883;"></div>
+          <div class="item-label">End Node</div>
+        </li>
+        <li>
+          <div class="item-square" style="background-color: #f6ff70;"></div>
+          <div class="item-label">Path Node</div>
+        </li>
+      </ul>
+    </div>
+
+    <main>
+      <table id="map-table" class="map-table"></table>
+    </main>
+
+
+
+
+    <script>
+      var container = document.getElementById("array");
+
+      function generatearray() {
+
+        var arr = [];
+
+        for (var i = 0; i < 20; i++) {
+          var val = Number(Math.ceil(Math.random() * 100));
+          arr.push(val);
+        }
+
+        arr.sort(function (a, b) {
+          return a - b;
+        });
+
+        for (var i = 0; i < 20; i++) {
+          var value = arr[i];
+
+          var array_ele = document.createElement("div");
+
+          array_ele.classList.add("block");
+
+          array_ele.style.height = `${value * 3}px`;
+          array_ele.style.transform = `translate(${i * 30}px)`;
+
+          var array_ele_label = document.createElement("label");
+          array_ele_label.classList.add("block_id");
+          array_ele_label.innerText = value;
+
+          array_ele.appendChild(array_ele_label);
+          container.appendChild(array_ele);
+        }
+      }
+
+      async function BinarySearch(delay = 300) {
+        var blocks = document.querySelectorAll(".block");
+        var output = document.getElementById("text");
+
+        var num = document.getElementById("fname").value;
+
+        for (var i = 0; i < blocks.length; i += 1) {
+          blocks[i].style.backgroundColor = "#6b5b95";
+        }
+
+        output.innerText = "";
+
+
+        var start = 0;
+        var end = 19;
+        var flag = 0;
+        while (start <= end) {
+          var mid = Math.floor((start + end) / 2);
+          blocks[mid].style.backgroundColor = "#FF4949";
+
+          var value = Number(blocks[mid].childNodes[0].innerHTML);
+
+          await new Promise((resolve) =>
+            setTimeout(() => {
+              resolve();
+            }, delay)
+          );
+
+          if (value == num) {
+            output.innerText = "Element Found";
+            blocks[mid].style.backgroundColor = "#13CE66";
+            flag = 1;
+            break;
+          }
+          if (value > num) {
+            end = mid - 1;
+            blocks[mid].style.backgroundColor = "#6b5b95";
+          } else {
+            start = mid + 1;
+            blocks[mid].style.backgroundColor = "#6b5b95";
+          }
+        }
+        if (flag === 0) {
+          output.innerText = "Element Not Found";
+        }
+      }
+
+      generatearray();
+
+    </script>
+  </body>
+
   <script>
     let onScreenCVS = document.querySelector(".map");
     let onScreenCTX = onScreenCVS.getContext("2d");
@@ -738,6 +1174,330 @@
     function makePath() {
       findPath();
     }
+
+
+    const mapTable = document.getElementById('map-table')
+    const nodeColors = ['#ffffff', '#243f39', '#fdffbf', '#bfeaff', '#ff9883', '#f6ff70']
+
+    class node {
+      constructor(distance, parent, isVisited, isBlocked, colorIndex) {
+        this.distance = distance
+        this.parent = parent
+        this.isVisited = isVisited
+        this.isBlocked = isBlocked
+        this.colorIndex = colorIndex
+      }
+    }
+
+    function createMapObject(width, height) {
+      let mapWidth = width
+      let mapHeight = height
+      let mapSize = mapWidth * mapHeight
+      let myNodes = []
+
+      let mapNodeAmmount = mapSize
+      for (let i = 0; i < mapNodeAmmount; i++) {
+        myNodes.push(new node(Infinity, undefined, false, false, 0))
+      }
+
+      function render() {
+        let html = ''
+
+        for (let row = 0; row < mapHeight; row++) {
+          html += '<tr>'
+
+          for (let column = 0; column < mapWidth; column++) {
+            nodeIndex = column + (row * mapWidth)
+            let colorIndex = myNodes[nodeIndex].colorIndex
+
+            html += `<td style="background-color:${nodeColors[colorIndex]};"></td>`
+          }
+
+          html += '</tr>'
+        }
+
+        mapTable.innerHTML = html
+      }
+
+      return {
+        render,
+        nodes: myNodes,
+        width: mapWidth,
+        height: mapHeight,
+        size: mapSize
+      }
+    }
+
+    function createDijkstraObject(nodeMap, startNode, endNode) {
+      let nodes = nodeMap.nodes
+      let unvisitedNodes = [startNode]
+      let currentNode
+      startNode.distance = 0
+
+      function doStep() {
+        currentNode = chooseBestNode()
+        visitNode(currentNode)
+
+        return currentNode
+      }
+
+      function visitNode(nodeToVisit) {
+        let nodeToVisitIndex = nodes.indexOf(nodeToVisit)
+        let nodeNeighbours = getUnvisitedNeighbours(nodeToVisitIndex)
+        let tentativeDistance = nodeToVisit.distance + 1
+
+        if (nodeNeighbours.length > 0) {
+          for (let neighbour of nodeNeighbours) {
+            if (neighbour.distance > tentativeDistance) {
+              neighbour.distance = tentativeDistance
+              neighbour.parent = nodeToVisit
+              unvisitedNodes.push(neighbour)
+            }
+          }
+        }
+
+        let visitedIndex = unvisitedNodes.indexOf(nodeToVisit)
+        unvisitedNodes.splice(visitedIndex, 1)
+        nodeToVisit.isVisited = true
+      }
+
+      function chooseBestNode() {
+        let bestNode = unvisitedNodes[0]
+
+        for (let unvisitedNode of unvisitedNodes) {
+          if (unvisitedNode.distance < bestNode.distance) {
+            bestNode = unvisitedNode
+          }
+        }
+
+        return bestNode
+      }
+
+      function getUnvisitedNeighbours(nodeIndex) {
+        let neighbours = []
+        let unvisitedNeighbours = []
+
+        if (nodeIndex > nodeMap.width) {
+          neighbours.push(nodes[nodeIndex - nodeMap.width])
+        }
+
+        if (nodeIndex + nodeMap.width < nodeMap.size) {
+          neighbours.push(nodes[nodeIndex + nodeMap.width])
+        }
+
+        if ((nodeIndex + 1) % nodeMap.width !== 0) {
+          neighbours.push(nodes[nodeIndex + 1])
+        }
+
+        if (nodeIndex % nodeMap.width !== 0) {
+          neighbours.push(nodes[nodeIndex - 1])
+        }
+
+        for (let neighbour of neighbours) {
+          if (!neighbour.isVisited && !neighbour.isBlocked) {
+            unvisitedNeighbours.push(neighbour)
+          }
+        }
+
+        return unvisitedNeighbours
+      }
+
+      function checkIfDone() {
+        return (unvisitedNodes.includes(endNode)) ? true : false
+      }
+
+      function tracePath(nodeToTrace) {
+        pathNodes = []
+
+        let pathHead = nodeToTrace
+        while (pathHead.parent !== startNode) {
+          pathHead = pathHead.parent
+          pathNodes.push(pathHead)
+        }
+
+        return pathNodes
+      }
+
+      return {
+        doStep,
+        checkIfDone,
+        tracePath,
+        getUnvisitedNeighbours,
+        nodes,
+        unvisitedNodes,
+        startNode,
+        endNode
+      }
+    }
+
+
+    const sizeButton = document.getElementById('size-button')
+    const widthInput = document.getElementById('width-input')
+    const heightInput = document.getElementById('height-input')
+    const blockButton = document.getElementById('block-button')
+    const startButton = document.getElementById('start-button')
+    const endButton = document.getElementById('end-button')
+    const clearButton = document.getElementById('clear-button')
+    const visualizeButton = document.getElementById('visualize-button')
+    mapTable.addEventListener('click', doCurrentFuctionOnNode)
+    sizeButton.addEventListener('click', setMapSize)
+    blockButton.addEventListener('click', function () {currentFunction = blockNode})
+    startButton.addEventListener('click', function () {currentFunction = setStartNode})
+    endButton.addEventListener('click', function () {currentFunction = setEndNode})
+    clearButton.addEventListener('click', clearMap)
+    visualizeButton.addEventListener('click', visualizeAlgorithm)
+
+    let myMap = createMapObject(15, 10)
+    let startingNode
+    let endingNode
+    let isRunning = false
+    let currentFunction = function () { }
+
+
+    function setMapSize() {
+      myMap = createMapObject(+widthInput.value, +heightInput.value)
+      myMap.render()
+      startingNode = undefined
+      endingNode = undefined
+    }
+
+    function clearMap() {
+      myMap = createMapObject(myMap.width, myMap.height)
+      myMap.render()
+      startingNode = undefined
+      endingNode = undefined
+    }
+
+    function doCurrentFuctionOnNode() {
+      tdClicked = event.target
+      if (tdClicked.tagName === 'TD') {
+        let tdRowIndex = tdClicked.parentElement.rowIndex
+        let tdIndex = tdClicked.cellIndex + (tdRowIndex * myMap.width)
+        let clickedNode = myMap.nodes[tdIndex]
+
+        currentFunction(clickedNode)
+      }
+    }
+
+    function blockNode(blockedNode) {
+      if (blockedNode === startingNode || blockedNode === endingNode) {
+        return
+      }
+      if (blockedNode.isBlocked) {
+        blockedNode.isBlocked = false
+        blockedNode.colorIndex = 0
+      } else {
+        blockedNode.isBlocked = true
+        blockedNode.colorIndex = 1
+      }
+
+      myMap.render()
+    }
+
+    function setStartNode(newStartNode) {
+      if (newStartNode === endingNode) {
+        return
+      }
+      if (startingNode !== undefined) {
+        startingNode.colorIndex = 0
+      }
+      startingNode = newStartNode
+      startingNode.colorIndex = 3
+      startingNode.isBlocked = false
+
+      myMap.render()
+    }
+
+    function setEndNode(newEndNode) {
+      if (newEndNode === startingNode) {
+        return
+      }
+      if (endingNode !== undefined) {
+        endingNode.colorIndex = 0
+      }
+      endingNode = newEndNode
+      endingNode.colorIndex = 4
+      endingNode.isBlocked = false
+
+      myMap.render()
+    }
+
+    function visualizeAlgorithm() {
+      if (startingNode === undefined || endingNode === undefined) {
+        return
+      }
+
+      mapTable.style.pointerEvents = 'none'
+      visualizeButton.innerHTML = 'Stop Algorithm'
+      visualizeButton.removeEventListener('click', visualizeAlgorithm)
+      visualizeButton.addEventListener('click', stopAlgorithm)
+      isRunning = true
+
+      let myDijkstra = new createDijkstraObject(myMap, startingNode, endingNode)
+
+      startAlgorithm(myDijkstra, 100)
+    }
+
+    function startAlgorithm(algorithm, speed) {
+      let nodeToAnimate = algorithm.doStep()
+
+      if (!isRunning) {
+        return
+      }
+
+      if (nodeToAnimate !== algorithm.startNode) {
+        nodeToAnimate.colorIndex = 2
+      }
+
+      if (algorithm.checkIfDone()) {
+        let path = algorithm.tracePath(algorithm.endNode)
+
+        for (pathNode of path) {
+          pathNode.colorIndex = 5
+        }
+
+        stopAlgorithm()
+        return
+      }
+
+      if (algorithm.unvisitedNodes.length > 0) {
+        return setTimeout(function () {
+          startAlgorithm(algorithm, speed)
+          myMap.render()
+        }, speed)
+      }
+      stopAlgorithm()
+    }
+
+    function stopAlgorithm() {
+      visualizeButton.innerHTML = 'Reset Map'
+      visualizeButton.removeEventListener('click', stopAlgorithm)
+      visualizeButton.addEventListener('click', resetMap)
+      mapTable.style.pointerEvents = 'all'
+      isRunning = false
+    }
+
+    function resetMap() {
+      visualizeButton.innerHTML = 'Visualize Algorithm'
+      visualizeButton.removeEventListener('click', resetMap)
+      visualizeButton.addEventListener('click', visualizeAlgorithm)
+
+      for (let i = 0; i < myMap.nodes.length; i++) {
+        let nodeToReset = myMap.nodes[i]
+        nodeToReset.distance = Infinity
+        nodeToReset.parent = undefined
+        nodeToReset.isVisited = false
+        if (nodeToReset !== startingNode && nodeToReset !== endingNode && !nodeToReset.isBlocked) {
+          nodeToReset.colorIndex = 0
+        }
+      }
+
+      myMap.render()
+    }
+
+    myMap.render()
+
+
   </script>
 </body>
 
